# HuesAndCues

./: .gitignore  Analyze_Results_Best.ipynb  Clip_HC.ipynb  Clip_HC.py  Clip_HC_clean.ipynb  Clip_HC_clean.py  Elipses_All.ipynb  Elipses_All.py  HC.csv  HC_old.csv  OpenClip.py  Palabras_Hues&Clues.xlsx  README.md  Words_Hues&Clues_Eng.xlsx  count_tests.ipynb  kk.ipynb  loop_openclip.py  models.txt  pass_test_results.csv  pretrained_models_openclip.csv  pyproject.toml  results_handc.csv  s_train.slurm  view_test_results.ipynb
Results/EVA01-g-14-laion400m_s11b_b41k/: p_values.csv  results.csv
Results/EVA01-g-14-plus-merged2b_s11b_b114k/: p_values.csv  results.csv
Results/EVA02-B-16-merged2b_s8b_b131k/: p_values.csv  results.csv
Results/EVA02-E-14-laion2b_s4b_b115k/: p_values.csv  results.csv
Results/EVA02-E-14-plus-laion2b_s9b_b144k/: p_values.csv  results.csv
Results/EVA02-L-14-336-merged2b_s6b_b61k/: p_values.csv  results.csv
Results/EVA02-L-14-merged2b_s4b_b131k/: p_values.csv  results.csv
Results/Humans/: covs.npy  means.npy
Results/MobileCLIP-B-datacompdr/: p_values.csv  results.csv
Results/MobileCLIP-B-datacompdr_lt/: p_values.csv  results.csv
Results/MobileCLIP-S1-datacompdr/: p_values.csv  results.csv
Results/MobileCLIP-S2-datacompdr/: p_values.csv  results.csv
Results/MobileCLIP2-B-dfndr2b/: p_values.csv  results.csv
Results/MobileCLIP2-L-14-dfndr2b/: p_values.csv  results.csv
Results/MobileCLIP2-S0-dfndr2b/: p_values.csv  results.csv
Results/MobileCLIP2-S2-dfndr2b/: p_values.csv  results.csv
huesandcues/: test_create.py  utils.py
(+288 files in other folders)
